# embraOS-QNM-Core

./: .gitignore  .zenodo.json  5D_FRAMEWORK.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: CORE-SPEC-feedback.md  CORE-SPEC.md
identity/: CONTROL_counter-identity.graph.json  Embra_IDENTITY-SOUL.graph.json  Embra_IDENTITY.graph.json  Embra_IDENTITY.md  Embra_SOUL.md
sandbox/: __init__.py  demo.py  demo_phase2.py  hnn.py  latent.py  replica_test.py  toy_dynamics.py
tests/: test_conjunction.py  test_conservation.py  test_hnn_dynamics.py  test_holonomy.py  test_identity_graph.py  test_latent.py  test_replica.py
